--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "jsx-a11y/alt-text": false
+    }
   },
   "browserslist": [
     ">0.2%",
