--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@octokit/rest": "15.18.0",
     "react": "^16.7.0-alpha.2",
     "react-cache": "^2.0.0-alpha.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
